Доделать нормальный вывод статистики для одного испытуемого